--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,6 +7,53 @@
 
     <body>
         <h1>Lasagna</h1>
+        <p><img src="../images/lasagna.jpg" width="400" height="400" ></p>
+        <h2>Description</h2>
+        <h3>Ingredients</h3>
+        <li>
+            <ul>1 pound sweet Italian sausage </ul>
+            <ul>¾ pound lean ground beef </ul>
+            <ul>½ cup minced onion </ul>
+            <ul>2 cloves garlic, crushed </ul>
+            <ul>1 (28 ounce) can crushed tomatoes </ul>
+            <ul>2 (6 ounce) cans tomato paste </ul>
+            <ul>2 (6.5 ounce) cans canned tomato sauce </ul>
+            <ul>½ cup water </ul>
+            <ul>2 tablespoons white sugar </ul>
+            <ul>1½ teaspoons dried basil leaves </ul>
+            <ul>½ teaspoon fennel seeds </ul>
+            <ul>1 teaspoon Italian seasoning </ul>
+            <ul>1½ teaspoons salt, divided, or to taste </ul>
+            <ul>¼ teaspoon ground black pepper </ul>
+            <ul>4 tablespoons chopped fresh parsley </ul>
+            <ul>12 lasagna noodles </ul>
+            <ul>16 ounces ricotta cheese </ul>
+            <ul>1 egg </ul>
+            <ul>¾ pound mozzarella cheese, sliced </ul>
+            <ul>¾ cup grated Parmesan cheese </ul>
+
+        </li>
+        <h3>Steps</h3>
+        <ol>
+            <li>In a Dutch oven, cook sausage, ground beef, onion, and garlic over medium heat until well browned. 
+                Stir in crushed tomatoes, tomato paste, tomato sauce, and water. Season with sugar, basil, fennel seeds, 
+                Italian seasoning, 1 teaspoon salt, pepper, and 2 tablespoons parsley. Simmer, covered, for about 1 1/2 hours, 
+                stirring occasionally.</li>
+            <li>Bring a large pot of lightly salted water to a boil. Cook lasagna noodles in boiling water for 8 to 10 minutes. 
+                Drain noodles, and rinse with cold water. In a mixing bowl, combine ricotta cheese with egg, remaining parsley, and 1/2 teaspoon salt.</li> 
+            <li>
+                Preheat oven to 375 degrees F (190 degrees C).
+            </li>
+            <li>
+                To assemble, spread 1 1/2 cups of meat sauce in the bottom of a 9x13-inch baking dish. Arrange 6 noodles lengthwise over meat sauce. 
+                Spread with one half of the ricotta cheese mixture. Top with a third of mozzarella cheese slices. 
+                Spoon 1 1/2 cups meat sauce over mozzarella, and sprinkle with 1/4 cup Parmesan cheese. Repeat layers, and top with remaining mozzarella and Parmesan cheese. 
+                Cover with foil: to prevent sticking, either spray foil with cooking spray, or make sure the foil does not touch the cheese.
+            </li>       
+            <li>
+                Bake in preheated oven for 25 minutes. Remove foil, and bake an additional 25 minutes. Cool for 15 minutes before serving.
+            </li>
+        </ol>
     </body>
 
 </html>
