Fix list tags for ingredients

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,36 +3,37 @@
 <html lang="en">
     <head>
         <meta charset ="utf-8">
+        <title>Lasagna Recipe</title>
     </head>
 
     <body>
         <h1>Lasagna</h1>
-        <p><img src="../images/lasagna.jpg" width="400" height="400" ></p>
+        <p><img src="../images/lasagna.jpg" width="400" height="400" alt="Lasagna"></p>
         <h2>Description</h2>
         <h3>Ingredients</h3>
-        <li>
-            <ul>1 pound sweet Italian sausage </ul>
-            <ul>¾ pound lean ground beef </ul>
-            <ul>½ cup minced onion </ul>
-            <ul>2 cloves garlic, crushed </ul>
-            <ul>1 (28 ounce) can crushed tomatoes </ul>
-            <ul>2 (6 ounce) cans tomato paste </ul>
-            <ul>2 (6.5 ounce) cans canned tomato sauce </ul>
-            <ul>½ cup water </ul>
-            <ul>2 tablespoons white sugar </ul>
-            <ul>1½ teaspoons dried basil leaves </ul>
-            <ul>½ teaspoon fennel seeds </ul>
-            <ul>1 teaspoon Italian seasoning </ul>
-            <ul>1½ teaspoons salt, divided, or to taste </ul>
-            <ul>¼ teaspoon ground black pepper </ul>
-            <ul>4 tablespoons chopped fresh parsley </ul>
-            <ul>12 lasagna noodles </ul>
-            <ul>16 ounces ricotta cheese </ul>
-            <ul>1 egg </ul>
-            <ul>¾ pound mozzarella cheese, sliced </ul>
-            <ul>¾ cup grated Parmesan cheese </ul>
+        <ul>
+            <li>1 pound sweet Italian sausage </li>
+            <li>¾ pound lean ground beef </li>
+            <li>½ cup minced onion </li>
+            <li>2 cloves garlic, crushed </li>
+            <li>1 (28 ounce) can crushed tomatoes </li>
+            <li>2 (6 ounce) cans tomato paste </li>
+            <li>2 (6.5 ounce) cans canned tomato sauce </li>
+            <li>½ cup water </li>
+            <li>2 tablespoons white sugar </li>
+            <li>1½ teaspoons dried basil leaves </li>
+            <li>½ teaspoon fennel seeds </li>
+            <li>1 teaspoon Italian seasoning </li>
+            <li>1½ teaspoons salt, divided, or to taste </li>
+            <li>¼ teaspoon ground black pepper </li>
+            <li>4 tablespoons chopped fresh parsley </li>
+            <li>12 lasagna noodles </li>
+            <li>16 ounces ricotta cheese </li>
+            <li>1 egg </li>
+            <li>¾ pound mozzarella cheese, sliced </li>
+            <li>¾ cup grated Parmesan cheese </li>
 
-        </li>
+        </ul>
         <h3>Steps</h3>
         <ol>
             <li>In a Dutch oven, cook sausage, ground beef, onion, and garlic over medium heat until well browned. 
