--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <p><a href="recipes/lasagna.html">Lasagna recipe</a></p>
+        <p><a href="recipes/frenchtoast.html">French toast recipe</a></p>
     </body>
 
 
